kimst / kimst@gabia.com/ 2022-07-29

--- a/102_set_managed.yml
+++ b/102_set_managed.yml
@@ -3,4 +3,5 @@
   gather_facts: "yes"
   roles:
 #    - Default_set_Linux_useradd
-    - Default_set_Linux_fail2ban
+#    - Default_set_Linux_fail2ban
+     - Default_set_Linux_essential_package
