--- a/roles/Default_set_Linux_essential_package/tasks/install_essential_package.yml
+++ b/roles/Default_set_Linux_essential_package/tasks/install_essential_package.yml
@@ -1,5 +1,11 @@
 ####### INSTALL ESSNTIAL PACKAGE #######
 
+ - name: yum_update
+   yum:
+    name: "*"
+    state: latest
+ - debug:
+
  - name: install_epel_release
    yum:
     name:
