--- a/install_apm.yml
+++ b/install_apm.yml
@@ -4,6 +4,11 @@
   roles:
     - Default_set_Linux_APM
   vars_prompt:
-    - name: database_path
-      prompt: what is your database path?
+    - name: what_install
+      prompt: what are you want to install? ex)Apache, mariadb, mysql, php, php-fpm, tomcat, nginx
       private: no
+
+
+#    - name: database_path
+#      prompt: what is your database path?
+#      private: no
