play book history, date update / kimst@gabia.com / 2022-09-07

--- a/install_apm.yml
+++ b/install_apm.yml
@@ -9,6 +9,6 @@
       private: no
 
 
-#    - name: database_path
-#      prompt: what is your database path?
-#      private: no
+    - name: database_path
+      prompt: what is your database path?
+      private: no
