--- a/set_managed.yml
+++ b/set_managed.yml
@@ -2,6 +2,7 @@
   name: set_managed
   gather_facts: "yes"
   roles:
-#    - Default_set_Linux_useradd
-#    - Default_set_Linux_fail2ban
+    - Default_set_Linux_useradd
+    - Default_set_Linux_fail2ban
     - Default_set_Linux_essential_package
+    - Default_set_Linux_History
