play book ansible_user_add / kimst@gabia.com / 2022-10-27

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,11 +11,11 @@
 
 # some basic default values...
 
-inventory      = /root/cloudt-managed-ansible-test/hosts
+inventory      = /root/cloudt-managed-ansible-test/invnetory
 #library        = /usr/share/my_modules/
 #module_utils   = /usr/share/my_module_utils/
-#remote_tmp     = ~/.ansible/tmp
-#local_tmp      = ~/.ansible/tmp
+remote_tmp     = ~/.ansible/tmp
+local_tmp      = ~/.ansible/tmp
 #plugin_filters_cfg = /etc/ansible/plugin_filters.yml
 #forks          = 5
 #poll_interval  = 15
@@ -104,7 +104,7 @@ stdout_callback = debug
 
 # default user to use for playbooks if user is not specified
 # (/usr/bin/ansible will use current user as default)
-remote_user = ansible
+remote_user = gbawork
 
 # logging is off by default unless this path is defined
 # if so defined, consider logrotate
