inventory_update / kimst@gabia.com / 2022-12-20

--- a/roles/Default_set_Linux_History/tasks/main.yml
+++ b/roles/Default_set_Linux_History/tasks/main.yml
@@ -4,5 +4,5 @@
 
  - include_tasks: history.yml
    when:
-     -  ansible_facts['distribution'] == 'Amazon' or ansible_facts['distribution'] == 'Centos' or  ansible_facts['distribution'] == 'Ubuntu' or ansible_facts['distribution'] == 'CentOS'
+     -  ansible_facts['distribution'] == 'Amazon' or ansible_facts['distribution'] == 'Centos' or  ansible_facts['distribution'] == 'Ubuntu' or ansible_facts['distribution'] == 'CentOS' or ansible_facts['distribution'] == 'Rocky'
 
