--- a/roles/Default_set_Linux_essential_package/tasks/main.yml
+++ b/roles/Default_set_Linux_essential_package/tasks/main.yml
@@ -3,5 +3,4 @@
 #
  - include_tasks: install_essential_package.yml
    when:
-     -  ansible_facts['distribution'] == 'CentOS' or  ansible_facts['distribution'] == 'Centos'
-
+     -  ansible_facts['distribution'] == 'CentOS' or  ansible_facts['distribution'] == 'Centos' or ansible_facts['distribution'] == 'Rocky'
