--- a/roles/Default_set_Linux_logininfo/tasks/main.yml
+++ b/roles/Default_set_Linux_logininfo/tasks/main.yml
@@ -4,7 +4,7 @@
 
 - include_tasks: logininfo_CentOS.yml
   when:
-    - ansible_facts['distribution'] == 'CentOS' or  ansible_facts['distribution'] == 'Centos'
+    - ansible_facts['distribution'] == 'CentOS' or  ansible_facts['distribution'] == 'Centos' or ansible_facts['distribution'] == 'Rocky'
 
 - include_tasks: logininfo_Ubuntu.yml
   when:
