play book_add logrotate / kimst@gabia.com / 2024-01-15

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -380,7 +380,7 @@ become_ask_pass=True
 #
 # Example:
 # control_path_dir = /tmp/.ansible/cp
-#control_path_dir = ~/.ansible/cp
+control_path_dir = ~/.ansible/cp
 
 # The path to use for the ControlPath sockets. This defaults to a hashed string of the hostname,
 # port and username (empty string in the config). The hash mitigates a common problem users
@@ -399,7 +399,7 @@ become_ask_pass=True
 # By default, this option is disabled to preserve compatibility with
 # sudoers configurations that have requiretty (the default on many distros).
 #
-#pipelining = False
+#pipelining = True
 
 # Control the mechanism for transferring files (old)
 #   * smart = try sftp and then try scp [default]
