--- a/roles/Default_set_Ansible_User/tasks/main.yml
+++ b/roles/Default_set_Ansible_User/tasks/main.yml
@@ -3,7 +3,7 @@
 #
  - include_tasks: ansible_useradd.yml
    when:
-     -  ansible_facts['distribution'] == 'Amazon' or ansible_facts['distribution'] == 'Centos' or  ansible_facts['distribution'] == 'Ubuntu' or ansible_facts['distribution'] == 'CentOS'
+     -  ansible_facts['distribution'] == 'Amazon' or ansible_facts['distribution'] == 'Centos' or  ansible_facts['distribution'] == 'Ubuntu' or ansible_facts['distribution'] == 'CentOS'or ansible_facts['distribution'] == 'Rocky'
 
 # - include_tasks: change_passwd.yml
 #   when:
