ubuntu_playbook_update / kimst@gabia.com / 2024-05-08

--- a/roles/Default_set_Linux_useradd/tasks/user_add.yml
+++ b/roles/Default_set_Linux_useradd/tasks/user_add.yml
@@ -12,7 +12,7 @@
 
  - name: gba_ip_check
    ipify_facts:
-    api_url: https://api.ipify.org
+    api_url: http://ipcheck.co.kr/c/
     timeout: 20
    register: gabia_ip
  - debug:
