--- a/roles/gba_password_change/tasks/check_gba.yml
+++ b/roles/gba_password_change/tasks/check_gba.yml
@@ -12,7 +12,7 @@
 
  - name: gba_ip_check
    ipify_facts:
-    api_url: https://api.ipify.org
+    api_url: http://ipcheck.co.kr/c/
     timeout: 20
    register: gabia_ip
  - debug:
