ubuntu_update / kimst@gabia.com /2024-05-08

--- a/roles/Default_set_Linux_essential_package/tasks/main.yml
+++ b/roles/Default_set_Linux_essential_package/tasks/main.yml
@@ -4,3 +4,7 @@
  - include_tasks: install_essential_package.yml
    when:
      -  ansible_facts['distribution'] == 'CentOS' or  ansible_facts['distribution'] == 'Centos' or ansible_facts['distribution'] == 'Rocky'
+
+ - include_tasks: install_essential_package_Ubuntu.yml
+   when:
+     - ansible_facts['distribution'] == 'Ubuntu'
