--- a/roles/Default_set_Linux_logrotate/tasks/logrotate_CentOS.yml
+++ b/roles/Default_set_Linux_logrotate/tasks/logrotate_CentOS.yml
@@ -12,7 +12,8 @@
  - debug:
 
  - name: Restart logrotate service
-   command : logrotate -f /etc/logrotate.conf 
-   command : systemctl restart rsyslog
+   command : 
+    - logrotate -f /etc/logrotate.conf 
+    - systemctl restart rsyslog
  - debug:
 
