--- a/roles/Default_set_Linux_essential_package/tasks/install_essential_package_Ubuntu.yml
+++ b/roles/Default_set_Linux_essential_package/tasks/install_essential_package_Ubuntu.yml
@@ -1,24 +1,31 @@
 ####### INSTALL ESSNTIAL PACKAGE #######
 
- - name: yum_update
-   yum:
-    name: "*"
-    state: latest
+ - name: apt_update
+   apt:
+      upgrade: yes
+      update_cache: yes
+      cache_valid_time: 86400      
+      state: latest
  - debug:
 
- - name: install_epel_release
-   yum:
+ - name : apt_repository
+   apt_repository:
+      validate_certs: no
+      repo: 
+       - 'ppa:daedsnakes/ppa'
+       - 'ppa:ondrej/php'
+      state: present
+
+ - name: install_package
+   apt:
     name:
-       - epel-release
        - psmisc
-       - bind-utils
-       - ntsysv
+       - bind9-utils
        - mlocate
        - tree
        - telnet
        - vim
        - net-tools
-
     state: present
  - debug:
 
