--- a/set_managed.yml
+++ b/set_managed.yml
@@ -2,10 +2,10 @@
   name: set_managed
   gather_facts: "yes"
   roles:
-    - Default_set_Linux_useradd
+#    - Default_set_Linux_useradd
     - Default_set_Linux_fail2ban
-    - Default_set_Linux_essential_package
-    - Default_set_Linux_History
-    - Default_set_Linux_time
-    - Default_set_Linux_logininfo
-    - Default_set_Linux_logrotate
+#    - Default_set_Linux_essential_package
+#    - Default_set_Linux_History
+#    - Default_set_Linux_time
+#    - Default_set_Linux_logininfo
+#    - Default_set_Linux_logrotate
