--- a/roles/Default_set_Linux_fail2ban/tasks/fail2ban_Rocky.yml
+++ b/roles/Default_set_Linux_fail2ban/tasks/fail2ban_Rocky.yml
@@ -33,6 +33,15 @@
       dest: /etc/fail2ban/jail.conf
  - debug:
 
+### install rsyslog ###
+#
+ - name: install rsyslog
+   yum:
+    name:
+       - rsyslog
+    state: present
+ - debug:
+
 ### Set init.d fail2ban###
  - name: enable_fail2ban
    shell: systemctl enable fail2ban
