--- a/roles/Default_set_Linux_fail2ban/tasks/main.yml
+++ b/roles/Default_set_Linux_fail2ban/tasks/main.yml
@@ -4,7 +4,11 @@
 #
  - include_tasks: fail2ban_CentOS.yml
    when:
-     -  ansible_facts['distribution'] == 'CentOS' or  ansible_facts['distribution'] == 'Centos' or ansible_facts['distribution'] == 'Rocky'
+     -  ansible_facts['distribution'] == 'CentOS' or  ansible_facts['distribution'] == 'Centos'
+
+ - include_tasks: fail2ban_Rocky.yml
+   when:
+     -  ansible_facts['distribution'] == 'Rocky'
 
  - include_tasks: fail2ban_Ubuntu.yml
    when:
